target/MCParser.py
# Generated from main/mc/parser/MC.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MCParser ( Parser ):

    grammarFileName = "MC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'break'", "'continue'", 
                     "'else'", "'for'", "'if'", "'return'", "'do'", "'while'", 
                     "'true'", "'false'", "'boolean'", "'string'", "'int'", 
                     "'float'", "'void'", "<INVALID>", "'+'", "'-'", "'*'", 
                     "'/'", "'!'", "'%'", "'||'", "'&&'", "'!='", "'=='", 
                     "'<'", "'>'", "'<='", "'>='", "'='", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "WS", "LINECMT", "BLOCKCMT", "INTLIT", 
                      "FLOATLIT", "BOOLLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "STRINGLIT", "BREAK", "CONTINUE", "ELSE", "FOR", "IF", 
                      "RETURN", "DO", "WHILE", "TRUE", "FALSE", "BOOLEANTYPE", 
                      "STRINGTYPE", "INTTYPE", "FLOATTYPE", "VOIDTYPE", 
                      "ID", "ADD", "SUB", "MUL", "DIV", "NOT", "MOD", "OR", 
                      "AND", "NOTEQUAL", "EQUAL", "LT", "GT", "LE", "GE", 
                      "ASSIGN", "LB", "RB", "LP", "RP", "LSB", "RSB", "SEMI", 
                      "CM", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_varDec = 2
    RULE_idList = 3
    RULE_idVar = 4
    RULE_funcDec = 5
    RULE_argList = 6
    RULE_arg = 7
    RULE_funcType = 8
    RULE_priType = 9
    RULE_literal = 10
    RULE_primaryExpress = 11
    RULE_postExpress = 12
    RULE_invocationExpress = 13
    RULE_unaryExpress = 14
    RULE_multiplicativeExpress = 15
    RULE_additiveExpress = 16
    RULE_relaExpress = 17
    RULE_equalExpress = 18
    RULE_logicalAndExpress = 19
    RULE_logicalOrExpress = 20
    RULE_assignExpress = 21
    RULE_express = 22
    RULE_simpleStament = 23
    RULE_structStamen = 24
    RULE_stament = 25
    RULE_blockStament = 26
    RULE_bodyBlock = 27
    RULE_ifStament = 28
    RULE_doWhileStament = 29
    RULE_forStament = 30
    RULE_breakStament = 31
    RULE_continueStament = 32
    RULE_returnStament = 33
    RULE_returnNone = 34
    RULE_returnValue = 35
    RULE_expressStament = 36

    ruleNames =  [ "program", "decl", "varDec", "idList", "idVar", "funcDec", 
                   "argList", "arg", "funcType", "priType", "literal", "primaryExpress", 
                   "postExpress", "invocationExpress", "unaryExpress", "multiplicativeExpress", 
                   "additiveExpress", "relaExpress", "equalExpress", "logicalAndExpress", 
                   "logicalOrExpress", "assignExpress", "express", "simpleStament", 
                   "structStamen", "stament", "blockStament", "bodyBlock", 
                   "ifStament", "doWhileStament", "forStament", "breakStament", 
                   "continueStament", "returnStament", "returnNone", "returnValue", 
                   "expressStament" ]

    EOF = Token.EOF
    WS=1
    LINECMT=2
    BLOCKCMT=3
    INTLIT=4
    FLOATLIT=5
    BOOLLIT=6
    UNCLOSE_STRING=7
    ILLEGAL_ESCAPE=8
    STRINGLIT=9
    BREAK=10
    CONTINUE=11
    ELSE=12
    FOR=13
    IF=14
    RETURN=15
    DO=16
    WHILE=17
    TRUE=18
    FALSE=19
    BOOLEANTYPE=20
    STRINGTYPE=21
    INTTYPE=22
    FLOATTYPE=23
    VOIDTYPE=24
    ID=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    NOT=30
    MOD=31
    OR=32
    AND=33
    NOTEQUAL=34
    EQUAL=35
    LT=36
    GT=37
    LE=38
    GE=39
    ASSIGN=40
    LB=41
    RB=42
    LP=43
    RP=44
    LSB=45
    RSB=46
    SEMI=47
    CM=48
    ERROR_CHAR=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MCParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.DeclContext)
            else:
                return self.getTypedRuleContext(MCParser.DeclContext,i)


        def getRuleIndex(self):
            return MCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 74
                self.decl()
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.FLOATTYPE) | (1 << MCParser.VOIDTYPE))) != 0)):
                    break

            self.state = 79
            self.match(MCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDec(self):
            return self.getTypedRuleContext(MCParser.VarDecContext,0)


        def funcDec(self):
            return self.getTypedRuleContext(MCParser.FuncDecContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MCParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.varDec()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.funcDec()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def priType(self):
            return self.getTypedRuleContext(MCParser.PriTypeContext,0)


        def idList(self):
            return self.getTypedRuleContext(MCParser.IdListContext,0)


        def SEMI(self):
            return self.getToken(MCParser.SEMI, 0)

        def getRuleIndex(self):
            return MCParser.RULE_varDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDec" ):
                return visitor.visitVarDec(self)
            else:
                return visitor.visitChildren(self)




    def varDec(self):

        localctx = MCParser.VarDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.priType()
            self.state = 86
            self.idList()
            self.state = 87
            self.match(MCParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idVar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.IdVarContext)
            else:
                return self.getTypedRuleContext(MCParser.IdVarContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_idList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdList" ):
                return visitor.visitIdList(self)
            else:
                return visitor.visitChildren(self)




    def idList(self):

        localctx = MCParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.idVar()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 90
                self.match(MCParser.CM)
                self.state = 91
                self.idVar()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdVarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_idVar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdVar" ):
                return visitor.visitIdVar(self)
            else:
                return visitor.visitChildren(self)




    def idVar(self):

        localctx = MCParser.IdVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idVar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(MCParser.ID)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LSB:
                self.state = 98
                self.match(MCParser.LSB)
                self.state = 99
                self.match(MCParser.INTLIT)
                self.state = 100
                self.match(MCParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(MCParser.FuncTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def blockStament(self):
            return self.getTypedRuleContext(MCParser.BlockStamentContext,0)


        def argList(self):
            return self.getTypedRuleContext(MCParser.ArgListContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_funcDec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDec" ):
                return visitor.visitFuncDec(self)
            else:
                return visitor.visitChildren(self)




    def funcDec(self):

        localctx = MCParser.FuncDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_funcDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.funcType()
            self.state = 104
            self.match(MCParser.ID)
            self.state = 105
            self.match(MCParser.LB)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.FLOATTYPE))) != 0):
                self.state = 106
                self.argList()


            self.state = 109
            self.match(MCParser.RB)
            self.state = 110
            self.blockStament()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ArgContext)
            else:
                return self.getTypedRuleContext(MCParser.ArgContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_argList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = MCParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.arg()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MCParser.CM:
                self.state = 113
                self.match(MCParser.CM)
                self.state = 114
                self.arg()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def priType(self):
            return self.getTypedRuleContext(MCParser.PriTypeContext,0)


        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_arg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = MCParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.priType()
            self.state = 121
            self.match(MCParser.ID)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MCParser.LSB:
                self.state = 122
                self.match(MCParser.LSB)
                self.state = 123
                self.match(MCParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def priType(self):
            return self.getTypedRuleContext(MCParser.PriTypeContext,0)


        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def VOIDTYPE(self):
            return self.getToken(MCParser.VOIDTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_funcType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncType" ):
                return visitor.visitFuncType(self)
            else:
                return visitor.visitChildren(self)




    def funcType(self):

        localctx = MCParser.FuncTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcType)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MCParser.BOOLEANTYPE, MCParser.STRINGTYPE, MCParser.INTTYPE, MCParser.FLOATTYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.priType()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MCParser.LSB:
                    self.state = 127
                    self.match(MCParser.LSB)
                    self.state = 128
                    self.match(MCParser.RSB)


                pass
            elif token in [MCParser.VOIDTYPE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(MCParser.VOIDTYPE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PriTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEANTYPE(self):
            return self.getToken(MCParser.BOOLEANTYPE, 0)

        def INTTYPE(self):
            return self.getToken(MCParser.INTTYPE, 0)

        def FLOATTYPE(self):
            return self.getToken(MCParser.FLOATTYPE, 0)

        def STRINGTYPE(self):
            return self.getToken(MCParser.STRINGTYPE, 0)

        def getRuleIndex(self):
            return MCParser.RULE_priType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPriType" ):
                return visitor.visitPriType(self)
            else:
                return visitor.visitChildren(self)




    def priType(self):

        localctx = MCParser.PriTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_priType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.BOOLEANTYPE) | (1 << MCParser.STRINGTYPE) | (1 << MCParser.INTTYPE) | (1 << MCParser.FLOATTYPE))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MCParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(MCParser.FLOATLIT, 0)

        def BOOLLIT(self):
            return self.getToken(MCParser.BOOLLIT, 0)

        def STRINGLIT(self):
            return self.getToken(MCParser.STRINGLIT, 0)

        def getRuleIndex(self):
            return MCParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = MCParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLLIT) | (1 << MCParser.STRINGLIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimaryExpressContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def literal(self):
            return self.getTypedRuleContext(MCParser.LiteralContext,0)


        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def express(self):
            return self.getTypedRuleContext(MCParser.ExpressContext,0)


        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def invocationExpress(self):
            return self.getTypedRuleContext(MCParser.InvocationExpressContext,0)


        def getRuleIndex(self):
            return MCParser.RULE_primaryExpress

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpress" ):
                return visitor.visitPrimaryExpress(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpress(self):

        localctx = MCParser.PrimaryExpressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_primaryExpress)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(MCParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.literal()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.match(MCParser.LB)
                self.state = 141
                self.express()
                self.state = 142
                self.match(MCParser.RB)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.invocationExpress()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostExpressContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primaryExpress(self):
            return self.getTypedRuleContext(MCParser.PrimaryExpressContext,0)


        def LSB(self):
            return self.getToken(MCParser.LSB, 0)

        def express(self):
            return self.getTypedRuleContext(MCParser.ExpressContext,0)


        def RSB(self):
            return self.getToken(MCParser.RSB, 0)

        def getRuleIndex(self):
            return MCParser.RULE_postExpress

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostExpress" ):
                return visitor.visitPostExpress(self)
            else:
                return visitor.visitChildren(self)




    def postExpress(self):

        localctx = MCParser.PostExpressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_postExpress)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.primaryExpress()
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 148
                self.match(MCParser.LSB)
                self.state = 149
                self.express()
                self.state = 150
                self.match(MCParser.RSB)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvocationExpressContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MCParser.ID, 0)

        def LB(self):
            return self.getToken(MCParser.LB, 0)

        def RB(self):
            return self.getToken(MCParser.RB, 0)

        def express(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MCParser.ExpressContext)
            else:
                return self.getTypedRuleContext(MCParser.ExpressContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MCParser.CM)
            else:
                return self.getToken(MCParser.CM, i)

        def getRuleIndex(self):
            return MCParser.RULE_invocationExpress

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvocationExpress" ):
                return visitor.visitInvocationExpress(self)
            else:
                return visitor.visitChildren(self)




    def invocationExpress(self):

        localctx = MCParser.InvocationExpressContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_invocationExpress)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(MCParser.ID)
            self.state = 155
            self.match(MCParser.LB)
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MCParser.INTLIT) | (1 << MCParser.FLOATLIT) | (1 << MCParser.BOOLLIT) | (1 << MCParser.STRINGLIT) | (1 << MCParser.ID) | (1 << MCParser.SUB) | (1 << MCParser.NOT) | (1 << MCParser.LB))) != 0):
                    self.state = 156
                    self.express()


                pass

            elif la_ == 2:
                self.state = 159
                self.express()
                self.state = 162 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 160
                    self.match(MCParser.CM)
                    self.state = 161
                    self.express()
                    self.state = 164 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==MCParser.CM):
                        break

                pass


            self.state = 168
            self.match(MCParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExpressContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def postExpress(self):
            return self.getTypedRuleContext(MCParser.PostExpressContext,0)


        def unaryExpress(self):
            return self.getTypedRuleContext(MCParser.UnaryExpressContext,0)


        def SUB(self):
            return self.getToken(MCParser.SUB, 0)

        def NOT(self):
            return self.getToken(MCParser.NOT, 0)

        def getRuleIndex(self):
            return MCParser.RULE_unaryExpress

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpress" ):
                return visitor.visitUnaryExpress(self)
            else:
                return visitor.visitChildren(self)




    def unaryExpress(self):
